src/test/deca/syntax/valid/while.deca
// Description :
//  test d'une boucle while 

// Résultats : 
//   Ok

{
while ( 1 < 2 ) {
 println("Hello");
 }
}