src/test/deca/syntax/invalid/test_synt8.deca
//Resultat:
//      Erreur syntaxique : l'argument de println est invalide
{
int x = 2;
println("" x);
int y;
}
